--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,21 @@
       </div>
     </div>
 
+    <header class="header">
+      <h1 class="header__title">Friends</h1>
+      <div class="header__icons">
+        <span>
+          <i class="fa-solid fa-user-plus fa-xl"></i>
+        </span>
+        <span>
+          <i class="fa-solid fa-users fa-xl"></i>
+        </span>
+        <span>
+          <i class="fa-solid fa-gear fa-xl"></i>
+        </span>
+      </div>
+    </header>
+
     <nav class="nav">
       <ul class="nav__ul">
         <li class="nav__li">
