--- a/friends.html
+++ b/friends.html
@@ -37,6 +37,71 @@
       </div>
     </header>
 
+    <a id="friends-names-display" href="#">
+      <i class="fa-solid fa-circle-info fa-sm"></i>
+      Friends' Names Display
+      <i class="fa-solid fa-chevron-right fa-sm"></i>
+    </a>
+
+    <main>
+      <div class="profile">
+        <div class="profile__column">
+          <img
+            src="https://i.namu.wiki/i/XWjM46zjlavSONTbkwnnNgZ8omNBV0l_pd0oLwPri8LwfwAdwN567GrqqpBJU_0qlZCEqrk5owiz-qlBOOBFMbeBBH8VsfDVrig2_J16C1CkTvQcmCuz_eeXblTmDeGZtBXYoMq6uKvt0J5NZXqDFg.webp"
+            class="profile__img"
+          />
+          <div class="profile__info">
+            <h3 class="profile__name profile__name--em">Matthew Lee</h3>
+          </div>
+        </div>
+        <div class="profile__column"></div>
+      </div>
+
+      <div class="friends">
+        <div class="friends__header">
+          <h3 class="friends__title">Channel</h3>
+          <span class="friends__count">
+            1
+            <i class="fa-solid fa-chevron-up fa-sm"></i>
+          </span>
+        </div>
+        <div class="profile">
+          <div class="profile__column">
+            <img
+              src="https://i.namu.wiki/i/AigDRZMdoiwGMZ-33x-vYls9Xf_miqyO0Gy371HqIDoA9PO1VJpJBKhVGSrmMbrhWxXU16nrVTSpH6l5wzL9JQnBuovtiBw259jbkGxVdR1ra-1MiW8Cgk_HNrN5msywwy0PeNtfokp0uHcPHO2jyA.webp"
+              class="profile__img profile__img--small"
+            />
+            <div class="profile__info">
+              <h3 class="profile__name">TIKITAKA</h3>
+            </div>
+          </div>
+          <div class="profile__column"></div>
+        </div>
+      </div>
+
+      <div class="friends">
+        <div class="friends__header">
+          <h3 class="friends__title">Friends</h3>
+          <span class="friends__count">
+            1
+            <i class="fa-solid fa-chevron-up fa-sm"></i>
+          </span>
+        </div>
+        <div class="profile">
+          <div class="profile__column">
+            <img
+              src="https://i.namu.wiki/i/HBd-3DXt1XuHTB0TKfqp1rUxd9qDZa6ziCMzdx_Xyl9IpXYtoaBL0FmTUQAkC8WUN3qR-TTFkk8QSA-9F9RxeJP3qoGXh_sC7_9uV_94TuPng90ZhX-ebymKN-i3M4yD0G09hHqEQY-us0mIjeHZ8g.webp"
+              class="profile__img profile__img--small"
+            />
+            <div class="profile__info">
+              <h3 class="profile__name">Geum La Hui</h3>
+            </div>
+          </div>
+          <div class="profile__column"></div>
+        </div>
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__ul">
         <li class="nav__li">
