--- a/friends.html
+++ b/friends.html
@@ -110,8 +110,8 @@
           </a>
         </li>
         <li class="nav__li">
-          <a class="nav__a" href="#">
-            <span class="nav__noti__msg">31</span>
+          <a class="nav__a" href="chats.html">
+            <span class="noti--msg nav__noti--msg">31</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
@@ -122,7 +122,7 @@
         </li>
         <li class="nav__li">
           <a class="nav__a" href="#">
-            <span class="nav__noti"></span>
+            <span class="noti nav__noti"></span>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
         </li>
