--- a/chats.html
+++ b/chats.html
@@ -70,7 +70,7 @@
           </a>
         </li>
         <li class="nav__li">
-          <a class="nav__a" href="#">
+          <a class="nav__a" href="search.html">
             <i class="fa-solid fa-magnifying-glass fa-2x"></i>
           </a>
         </li>
