--- a/chats.html
+++ b/chats.html
@@ -41,7 +41,7 @@
       <div class="profile">
         <div class="profile__column">
           <img
-            src="https://i.namu.wiki/i/HBd-3DXt1XuHTB0TKfqp1rUxd9qDZa6ziCMzdx_Xyl9IpXYtoaBL0FmTUQAkC8WUN3qR-TTFkk8QSA-9F9RxeJP3qoGXh_sC7_9uV_94TuPng90ZhX-ebymKN-i3M4yD0G09hHqEQY-us0mIjeHZ8g.webp"
+            src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
             class="profile__img profile__img--small"
           />
           <div class="profile__info">
@@ -75,7 +75,7 @@
           </a>
         </li>
         <li class="nav__li">
-          <a class="nav__a" href="#">
+          <a class="nav__a" href="more.html">
             <span class="noti nav__noti"></span>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
