--- a/friends.html
+++ b/friends.html
@@ -47,7 +47,7 @@
       <div class="profile">
         <div class="profile__column">
           <img
-            src="https://i.namu.wiki/i/XWjM46zjlavSONTbkwnnNgZ8omNBV0l_pd0oLwPri8LwfwAdwN567GrqqpBJU_0qlZCEqrk5owiz-qlBOOBFMbeBBH8VsfDVrig2_J16C1CkTvQcmCuz_eeXblTmDeGZtBXYoMq6uKvt0J5NZXqDFg.webp"
+            src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/IKp1693791744907-666-968.jpg"
             class="profile__img"
           />
           <div class="profile__info">
@@ -68,7 +68,7 @@
         <div class="profile">
           <div class="profile__column">
             <img
-              src="https://i.namu.wiki/i/AigDRZMdoiwGMZ-33x-vYls9Xf_miqyO0Gy371HqIDoA9PO1VJpJBKhVGSrmMbrhWxXU16nrVTSpH6l5wzL9JQnBuovtiBw259jbkGxVdR1ra-1MiW8Cgk_HNrN5msywwy0PeNtfokp0uHcPHO2jyA.webp"
+              src="https://i.namu.wiki/i/E1Q7QKHGrDsuyQ3p96unCKTYDileoGXXXR2KHR27vDo7ZrJ1SeGP3Fq8Le1_3jMfeREK1TuExa8udeKx3EufnLeiMeubLwrEPWVUoLy4vOolkMfZMDmR0LM3ZxuP3zsRme-AfNPXxeMrl3FdhhMcEw.webp"
               class="profile__img profile__img--small"
             />
             <div class="profile__info">
@@ -90,7 +90,7 @@
         <div class="profile">
           <div class="profile__column">
             <img
-              src="https://i.namu.wiki/i/HBd-3DXt1XuHTB0TKfqp1rUxd9qDZa6ziCMzdx_Xyl9IpXYtoaBL0FmTUQAkC8WUN3qR-TTFkk8QSA-9F9RxeJP3qoGXh_sC7_9uV_94TuPng90ZhX-ebymKN-i3M4yD0G09hHqEQY-us0mIjeHZ8g.webp"
+              src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
               class="profile__img profile__img--small"
             />
             <div class="profile__info">
@@ -121,7 +121,7 @@
           </a>
         </li>
         <li class="nav__li">
-          <a class="nav__a" href="#">
+          <a class="nav__a" href="more.html">
             <span class="noti nav__noti"></span>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
