--- a/search.html
+++ b/search.html
@@ -38,20 +38,20 @@
     </header>
 
     <main style="padding: 1rem">
-      <div class="search__icons">
-        <div class="search__icons--icon">
+      <div class="icon-row">
+        <div class="icon-row--icon">
           <i class="fa-solid fa-qrcode"></i>
           <span> QR Code </span>
         </div>
-        <div class="search__icons--icon">
+        <div class="icon-row--icon">
           <i class="fa-regular fa-address-book"></i>
           <span>Contract</span>
         </div>
-        <div class="search__icons--icon">
+        <div class="icon-row--icon">
           <i class="fa-regular fa-id-card"></i>
           <span>ID</span>
         </div>
-        <div class="search__icons--icon">
+        <div class="icon-row--icon">
           <i class="fa-regular fa-envelope"></i>
           <span>Invite</span>
         </div>
@@ -76,7 +76,7 @@
             <h5 class="open-chat__content--hashtags">#SunsetKiss</h5>
             <div class="open-chat__content--members">
               <img
-                src="https://i.namu.wiki/i/Q_frQU6iDAd35g2XeKGyX7QQtQs-fPCVLqIyW7Nd0s3-4HiT5vk5dRUPbHsX0sPtGQ1Fk4B1fyP8LD92AcN5gGfOKI9dZuB7VJnUZJW6C8a5_jB0OQXPs9XtPEtA47mQaqt8AhqSjJTIhId6RBHphQ.webp"
+                src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/sK91693791888613-666-968.jpg"
               />
               <span class="open-chat__content--member-count">550 members</span>
               <div class="divider"></div>
@@ -86,7 +86,7 @@
           <div class="open-chat__content--column">
             <div class="open-chat__content--thumbnail">
               <img
-                src="https://i.namu.wiki/i/K21SmxjvUdK-dIqTEX7md_Zwo84LYHUeTRHDeNmvX7GC5Gx_nC8-DvRG5Z-I2kHfBKzdxAOiFUlCsRe0nqow39D-Z16Iw9QgGCoTE-f3mKUU2MPjrHmmc14j67_Vw9_N5k3uBxdGfKiBPYotS2dueg.webp"
+                src="https://image.bugsm.co.kr/album/images/200/40922/4092232.jpg?version=20231022063516.0"
               />
               <div class="open-chat__content--like-count">
                 <i class="fa-solid fa-heart fa-xs"></i>
@@ -117,7 +117,7 @@
           </a>
         </li>
         <li class="nav__li">
-          <a class="nav__a" href="#">
+          <a class="nav__a" href="more.html">
             <span class="noti nav__noti"></span>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
