--- a/more.html
+++ b/more.html
@@ -32,7 +32,7 @@
           <i class="fa-brands fa-github fa-xl"></i>
         </span>
         <span>
-          <i class="fa-solid fa-gear fa-xl"></i>
+          <a href="settings.html"><i class="fa-solid fa-gear fa-xl"></i></a>
         </span>
       </div>
     </header>
@@ -187,7 +187,7 @@
         </li>
         <li class="nav__li">
           <a class="nav__a" href="chats.html">
-            <span class="noti--msg nav__noti--msg">31</span>
+            <span class="noti--msg nav__noti--msg">1</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
