--- a/chats.html
+++ b/chats.html
@@ -38,22 +38,26 @@
     </header>
 
     <main>
-      <div class="profile">
-        <div class="profile__column">
-          <img
-            src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
-            class="profile__img profile__img--small"
-          />
-          <div class="profile__info">
-            <h3 class="profile__name">Geum La Hui</h3>
-            <h4 class="profile__text">Come on, you're attracted to me, too.</h4>
+      <a href="chat.html">
+        <div class="profile">
+          <div class="profile__column">
+            <img
+              src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
+              class="profile__img profile__img--small"
+            />
+            <div class="profile__info">
+              <h3 class="profile__name">Geum La Hui</h3>
+              <h4 class="profile__text">
+                Come on, you're attracted to me, too.
+              </h4>
+            </div>
+          </div>
+          <div class="profile__column">
+            <span class="profile__column--time">20:24</span>
+            <div class="noti--msg">1</div>
           </div>
         </div>
-        <div class="profile__column">
-          <span class="profile__column--time">20:24</span>
-          <div class="noti--msg">31</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
@@ -65,7 +69,7 @@
         </li>
         <li class="nav__li">
           <a class="nav__a" href="chats.html">
-            <span class="noti--msg nav__noti--msg">31</span>
+            <span class="noti--msg nav__noti--msg">1</span>
             <i class="fa-solid fa-comment fa-2x"></i>
           </a>
         </li>
