--- a/friends.html
+++ b/friends.html
@@ -129,6 +129,14 @@
       </ul>
     </nav>
 
+    <div id="splash">
+      <i class="fa-solid fa-message"></i>
+    </div>
+
+    <div id="mobile">
+      <p>Sorry, this app is only available on mobile.</p>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/b544fcb91e.js"
       crossorigin="anonymous"
