--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <div class="subheader__column">
-        <h1 class="subheader__title">Geum La Hui</h1>
+        <h1 class="subheader__title">Nicolas</h1>
       </div>
       <div class="subheader__column">
         <span><i class="fa-solid fa-search fa-2xl"></i></span>
@@ -32,13 +32,11 @@
       <div class="chat__timestamp">Wednesday, February 14, 2024</div>
 
       <div class="msg-row">
-        <img
-          src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
-        />
+        <img src="https://avatars.githubusercontent.com/u/3612017?v=4" />
         <div class="msg__contents">
-          <span class="msg__sender">Geum La Hui</span>
+          <span class="msg__sender">Nicolas</span>
           <div class="msg__content">
-            <span class="msg">Come on, you're attracted to me, too.</span>
+            <span class="msg">How cool is that~</span>
             <span class="msg__time">2:15</span>
           </div>
         </div>
@@ -47,8 +45,19 @@
       <div class="msg-row reverse">
         <div class="msg__contents">
           <div class="msg__content">
-            <span class="msg">Here's looking at you, kid.</span>
+            <span class="msg">Tell me about it</span>
             <span class="msg__time">4:33</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="msg-row">
+        <img src="https://avatars.githubusercontent.com/u/3612017?v=4" />
+        <div class="msg__contents">
+          <span class="msg__sender">Nicolas</span>
+          <div class="msg__content">
+            <span class="msg">Don't forget to eat kimchi</span>
+            <span class="msg__time">9:23</span>
           </div>
         </div>
       </div>
