--- a/chats.html
+++ b/chats.html
@@ -31,14 +31,12 @@
         <div class="profile">
           <div class="profile__column">
             <img
-              src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
+              src="https://avatars.githubusercontent.com/u/3612017?v=4"
               class="profile__img profile__img--small"
             />
             <div class="profile__info">
-              <h3 class="profile__name">Geum La Hui</h3>
-              <h4 class="profile__text">
-                Come on, you're attracted to me, too.
-              </h4>
+              <h3 class="profile__name">Nicolas</h3>
+              <h4 class="profile__text">Don't forget to eat kimchi</h4>
             </div>
           </div>
           <div class="profile__column">
