--- a/friends.html
+++ b/friends.html
@@ -36,11 +36,11 @@
       <div class="profile">
         <div class="profile__column">
           <img
-            src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/IKp1693791744907-666-968.jpg"
+            src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/mingu-1667233346.jpg"
             class="profile__img"
           />
           <div class="profile__info">
-            <h3 class="profile__name profile__name--em">Matthew Lee</h3>
+            <h3 class="profile__name profile__name--em">Mingu</h3>
           </div>
         </div>
         <div class="profile__column"></div>
@@ -57,11 +57,11 @@
         <div class="profile">
           <div class="profile__column">
             <img
-              src="https://i.namu.wiki/i/E1Q7QKHGrDsuyQ3p96unCKTYDileoGXXXR2KHR27vDo7ZrJ1SeGP3Fq8Le1_3jMfeREK1TuExa8udeKx3EufnLeiMeubLwrEPWVUoLy4vOolkMfZMDmR0LM3ZxuP3zsRme-AfNPXxeMrl3FdhhMcEw.webp"
+              src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4"
               class="profile__img profile__img--small"
             />
             <div class="profile__info">
-              <h3 class="profile__name">TIKITAKA</h3>
+              <h3 class="profile__name">Nomad Coders</h3>
             </div>
           </div>
           <div class="profile__column"></div>
@@ -79,11 +79,11 @@
         <div class="profile">
           <div class="profile__column">
             <img
-              src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/cyB1693791821534-666-968.jpg"
+              src="https://avatars.githubusercontent.com/u/3612017?v=4"
               class="profile__img profile__img--small"
             />
             <div class="profile__info">
-              <h3 class="profile__name">Geum La Hui</h3>
+              <h3 class="profile__name">Nicolas</h3>
             </div>
           </div>
           <div class="profile__column"></div>
