--- a/search.html
+++ b/search.html
@@ -51,33 +51,35 @@
         <span>You have no recommended friends.</span>
       </div>
 
-      <div class="fan-chat">
-        <div class="fan-chat__header">
-          <h3>Fan Chat</h3>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h3>OpenChat</h3>
           <span>
-            Go to Fan Chat Home
+            Go to OpenChat Home
             <i class="fa-solid fa-chevron-right fa-2xs"></i>
           </span>
         </div>
-        <div class="fan-chat__content">
-          <div class="fan-chat__content--column">
-            <h4 class="fan-chat__content--title">MONE</h4>
-            <h5 class="fan-chat__content--hashtags">#SunsetKiss #KPop</h5>
-            <div class="fan-chat__content--members">
+        <div class="open-chat__content">
+          <div class="open-chat__content--column">
+            <h4 class="open-chat__content--title">NOMAD CODERS</h4>
+            <h5 class="open-chat__content--hashtags">#Html #Css</h5>
+            <div class="open-chat__content--members">
               <img
-                src="https://img2.sbs.co.kr/img/sbs_cms/WE/2023/09/04/sK91693791888613-666-968.jpg"
+                src="https://asset.brandfetch.io/idPqy6xHK-/idWokaaYsl.jpeg"
               />
-              <span class="fan-chat__content--member-count">550 members</span>
+              <span class="open-chat__content--member-count"
+                >41,847 members</span
+              >
               <div class="divider"></div>
-              <span class="fan-chat__content--members-status">Active</span>
+              <span class="open-chat__content--members-status">Active</span>
             </div>
           </div>
-          <div class="fan-chat__content--column">
-            <div class="fan-chat__content--thumbnail">
+          <div class="open-chat__content--column">
+            <div class="open-chat__content--thumbnail">
               <img
-                src="https://image.bugsm.co.kr/album/images/200/40922/4092232.jpg?version=20231022063516.0"
+                src="https://asset.brandfetch.io/idPqy6xHK-/idfnFBE52I.png"
               />
-              <div class="fan-chat__content--like-count">
+              <div class="open-chat__content--like-count">
                 <i class="fa-solid fa-heart fa-xs"></i>
                 <span>608</span>
               </div>
