--- a/more.html
+++ b/more.html
@@ -49,7 +49,11 @@
           </div>
         </div>
         <div class="profile__column">
-          <i class="fa-solid fa-inbox fa-2xl"></i>
+          <a
+            href="https://github.com/mingufkim?tab=repositories"
+            target="_blank"
+            ><i class="fa-solid fa-inbox fa-2xl"></i
+          ></a>
         </div>
       </div>
 
@@ -58,14 +62,17 @@
           <i class="fa-regular fa-calendar"></i>
           <span>Calendar</span>
         </div>
-        <div class="icon-row--icon">
+
+        <a href="calc.html" class="icon-row--icon">
           <i class="fa-solid fa-calculator"></i>
           <span>Calculator</span>
-        </div>
-        <div class="icon-row--icon">
+        </a>
+
+        <a href="paint.html" class="icon-row--icon">
           <i class="fa-solid fa-palette"></i>
           <span>Paint</span>
-        </div>
+        </a>
+
         <div class="icon-row--icon">
           <i class="fa-solid fa-wallet"></i>
           <span>Wallet</span>
